# jaxtari-blines

./: .gitignore  README.md  main.py  pyproject.toml
agents/dqn/: dqn.py  dqn_eval.py
agents/ppo/: ppo.py  ppo_eval.py
config/: config.yaml
config/alg/: dqn_oc_original.yaml  dqn_oc_tuned.yaml  dqn_rgb_original.yaml  dqn_rgb_tuned.yaml  ppo_oc.yaml  ppo_rgb.yaml
